# EuroScope

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  SECURITY.md  archive.txt  audit2.txt  audit_results.txt  behavioral_report.md  behavioral_report_v3.md  capital_test.py  capital_ws_test.py  clean_bot.py  diag_market.py  docker-compose.yml  fetch_historical_data.py  fix_logger.py  index.html  inspect_ws.py  output.txt  pyproject.toml  pytest_errors.txt  pytest_out.txt  pytest_results.txt  refactor.py  refactor2.py  refactor3.py  requirements.txt  resume.txt  run_backtest.py  run_simulation.py  telegram_bot.py  test_ask_context.py  test_auto_trader.py  test_biquote.py  test_capital_account.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
data/: euroscope.db-shm  euroscope.db-wal  eurusd_h1_2years.csv  sentiment_graph.graphml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVENTS.md  STORAGE.md  postgres_migration_plan.md
euroscope/: __init__.py  config.py  container.py  main.py
scripts/: migrate_sqlite_to_pg.py  simulate_full_cycle.py  test_briefing_engine.py  test_forecast_bottleneck.py  test_forecast_parser.py  test_forecast_speed.py  test_market_pulse.py  verify_features.py
tests/: conftest.py  test_agent.py  test_automation.py  test_backtest_engine.py  test_behavioral_validation.py  test_bot_callbacks.py  test_briefing_engine.py  test_conflict_arbiter.py  test_cot_filter.py  test_database_backup.py  test_debate_engine.py  test_debate_integration.py  test_decision_log.py  test_evaluation_harness.py  (+45 more)
(+202 files in other folders)
